opam-version: "1.2"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]
homepage: "https://github.com/mjambon/dutop"
bug-reports: "https://github.com/mjambon/dutop/issues"
dev-repo: "https://github.com/mjambon/dutop.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
]
